--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -24,8 +25,11 @@
     "react-modal-sheet": "^2.2.0",
     "react-native": "0.72.6",
     "react-native-collapsible": "^1.6.1",
+    "react-native-date-picker": "^4.3.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
