--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/react-native": "^5.0.5",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-camera-roll/camera-roll": "^7.2.0",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/segmented-control": "^2.2.2",
+    "@react-native-community/slider": "^4.4.4",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -36,7 +41,8 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-side-menu-updated": "^1.3.2",
     "react-native-svg": "^14.1.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
