--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/react-native": "^5.0.5",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-camera-roll/camera-roll": "^7.2.0",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/segmented-control": "^2.2.2",
@@ -20,6 +21,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@tanstack/react-query": "^5.13.4",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
@@ -42,6 +45,8 @@
     "react-native-side-menu-updated": "^1.3.2",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.1.10",
+    "react-native-toast-notifications": "^3.4.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
